--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Google Web Font -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!-- Custom Google Web Font -->
 
     <!-- Add custom CSS here -->
@@ -40,7 +41,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#about">About</a>
                     </li>
-                    <li><a href="#services">Services</a>
+                    <li><a href="#services">Products</a>
                     </li>
                     <li><a href="#contact">Contact</a>
                     </li>
@@ -62,11 +63,9 @@
                         <h3>COMING SOON</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
-                            <li><a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <li><a href="TWITTER LINK HERE" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">follow us on Twitter</span></a>
                             </li>
-                            <li><a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <li><a href="FACEBOOK LINK HERE" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">like us on Facebook</span></a>
                             </li>
                         </ul>
                     </div>
