more html/css tweaking
changed title
added and placed images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sovereign Denim</title>
+    <title>Sohn & Co.</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -55,11 +55,10 @@
     <div class="intro-header">
 
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Sovereign Denim</h1>
+                        <img src="img/sohncolo.png">
                         <h3>COMING SOON</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
@@ -71,13 +70,94 @@
                     </div>
                 </div>
             </div>
-
         </div>
         <!-- /.container -->
 
     </div>
     <!-- /.intro-header -->
 
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">About Us:
+                        <br>Sohn & Co.</h2>
+                    <p class="lead">Sohn & Co. is an apparel company based in Austin, TX, inspired      greatly by the people around us. We provide high quality clothing in line with current trends and sprinkle in a little of our own taste.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6"><br><br><br><br>
+                    <img class="img-responsive" src="img/sohncoblk.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Products</h2>
+                    <p class="lead">We look forward to providing a wide vareity of products ranging from denim to tees, and everything in between - even accessories. We look forward to providing our clientele with premium products.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/clubmast.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
+    <div class="content-section-a">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Contact</h2>
+                    <p class="lead">We'd love to get in touch with you. Send us your comments, questions, complaints, or concerns.
+                    <br>
+                    <br>
+                    <br>
+                    <i class="fa fa-envelope fa-fw"></i>: dayne@sohn.co
+                    <br>
+                    <br>
+                    <i class="fa fa-phone fa-fw"></i>: 512.555.1990</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <br><br><h2>We'd like to hear from you</h2>
+                    <form>
+                        Name:         <input type="text" name="name"><br><br>
+                        Email:         <input type="text" name="email"><br><br>
+                        Message:    <input type="text" name="message" style="width: 200px; height: 100px;">
+                        <br><br>
+                        <input type="submit" value="Send">
+                    </form>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
+
+    
    
 
     <footer>
@@ -85,19 +165,19 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <li><a href="#home">Home</a>
+                        <li><a href="/index.html">Home</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#about">About</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
-                        <li><a href="#services">Services</a>
+                        <li><a href="#products">Products</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li><a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Sovereign Denim 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Sohn & Co. 2014. All Rights Reserved</p>
                 </div>
             </div>
         </div>
