--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom Google Web Font -->
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!-- Custom Google Web Font -->
 
     <!-- Add custom CSS here -->
@@ -59,7 +59,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <img src="img/sohncolo.png">
-                        <h3>COMING SOON</h3>
+                        <h3>COMING LATE 2014</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li><a href="TWITTER LINK HERE" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">follow us on Twitter</span></a>
@@ -177,7 +177,7 @@
                         <li><a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Sohn & Co. 2014. All Rights Reserved</p>
+                    <p>Copyright &copy; Sohn & Co. 2014. All Rights Reserved</p>
                 </div>
             </div>
         </div>
